--- a/_posts/2014-03-01-woman.md
+++ b/_posts/2014-03-01-woman.md
@@ -8,110 +8,110 @@ tags:  issue summary
 
 
 
-# 主题：阅读邻居第22期--“女博与女士
-《话题2013》
+# 主题:阅读邻居第22期--"女博与女士
+<<话题2013>>
 
 ![](http://ww2.sinaimg.cn/bmiddle/9b4cdbf4tw1ednd166mnlj21kw299gra.jpg)
 
 
-- 时间：2014年3月1日（周六）下午2至5点 - 场所：公交363终点（四惠起点）万科青青家园商业街读易洞书房 
-- 报名：限12人
-- 嘉宾：@杨早、@邱小石、@Yellowflying、@乔庄皮皮、@AaronShen、@蕴伽、@出版人Sophie、@半价优惠、@澜雨、@TN_南南北北上的东西、@啤酒黄永、@半价优惠爱人、@绿茶、@淑婵想、@沉醉寒冬、@思无邪雨雪霏霏、@刘倩、@李子Percylee、@李好多、@颜浩、@讷言敏行的猪、@Jingleling晶
+- 时间:2014年3月1日(周六)下午2至5点 - 场所:公交363终点(四惠起点)万科青青家园商业街读易洞书房 
+- 报名:限12人
+- 嘉宾:@杨早,@邱小石,@Yellowflying,@乔庄皮皮,@AaronShen,@蕴伽,@出版人Sophie,@半价优惠,@澜雨,@TN_南南北北上的东西,@啤酒黄永,@半价优惠爱人,@绿茶,@淑婵想,@沉醉寒冬,@思无邪雨雪霏霏,@刘倩,@李子Percylee,@李好多,@颜浩,@讷言敏行的猪,@Jingleling晶
 
 
 
 # 节略
-@杨早：欢迎大家来到马年第一期的阅读邻居。今天小石发公微的时候说每年我们都是以话题开场的，所以这变成了一个惯例，或者变成了一个节目，一个仪式。
-今年有一个变化，我没有说让大家专门讨论话题，我定了一个题目。刚才有人在微信上说，干脆叫女博士算了。其实不一样，大家都知道我是一个比较环保的人，可以三个字的我不会用五个字。女博和女士，它有不同的含义，一会儿我们讨论主题的时候再说。
+@杨早:欢迎大家来到马年第一期的阅读邻居. 今天小石发公微的时候说每年我们都是以话题开场的,所以这变成了一个惯例,或者变成了一个节目,一个仪式. 
+今年有一个变化,我没有说让大家专门讨论话题,我定了一个题目. 刚才有人在微信上说,干脆叫女博士算了. 其实不一样,大家都知道我是一个比较环保的人,可以三个字的我不会用五个字. 女博和女士,它有不同的含义,一会儿我们讨论主题的时候再说. 
 
 ...
 
 ## 主题
 
-- @杨早：荐书到此为止。
+- @杨早:荐书到此为止. 
 
-女博与女士的意思，女博指的是女性对知识的掌握。大家知道培根说过，“知识就是权力。”在一个男权社会，当女性掌握一定的知识的时候就是变得相对不可控制，这样一批掌握知识的女性会成为男权社会的一个突破常规的存在，而这个突破常规或者叫做另类的存在，会导致整个男性社会的权力架构出现裂隙，甚至出现崩溃的迹象。所以，掌握知识女性的存在，本身就是我们社会值得关注的一个现象。而在座各位都是属于知识女性，都是属于这个范畴，大家是不是讨论一下自己的处境。
+女博与女士的意思,女博指的是女性对知识的掌握. 大家知道培根说过,"知识就是权力. "在一个男权社会,当女性掌握一定的知识的时候就是变得相对不可控制,这样一批掌握知识的女性会成为男权社会的一个突破常规的存在,而这个突破常规或者叫做另类的存在,会导致整个男性社会的权力架构出现裂隙,甚至出现崩溃的迹象. 所以,掌握知识女性的存在,本身就是我们社会值得关注的一个现象. 而在座各位都是属于知识女性,都是属于这个范畴,大家是不是讨论一下自己的处境. 
 
-女士实际上是在“士”前面加了一个女，士其实指的是掌握了知识的人在这个社会的一个角色担当。那么作为女性来说，传统的设定里面女性是更偏重于家庭的，偏重于向内的，而不是向外和参加社会事务的。实际上大家看得出来，现在女性参与社会事务越来越多，即使还是有这个那个阻碍，比如大家会说女孩子不要读太多书，女孩子不要怎么样，甚至包括电视剧等都会区分出哪些适合男的看，哪些女的看的，书也会有这么一个区分。这种区分是否正确或者是否站得住脚，一个女性可能在这个社会中扮一个什么样的角色，担当什么样的使命，这个是我觉得可以关心和讨论的问题。
-
-...
-
-- @TN_南南北北上的东西：
+女士实际上是在"士"前面加了一个女,士其实指的是掌握了知识的人在这个社会的一个角色担当. 那么作为女性来说,传统的设定里面女性是更偏重于家庭的,偏重于向内的,而不是向外和参加社会事务的. 实际上大家看得出来,现在女性参与社会事务越来越多,即使还是有这个那个阻碍,比如大家会说女孩子不要读太多书,女孩子不要怎么样,甚至包括电视剧等都会区分出哪些适合男的看,哪些女的看的,书也会有这么一个区分. 这种区分是否正确或者是否站得住脚,一个女性可能在这个社会中扮一个什么样的角色,担当什么样的使命,这个是我觉得可以关心和讨论的问题. 
 
 ...
 
-络上的一些东西，我觉得女汉子这个词不得不说，这个词其实挺可悲的，它算是一个女性不得不拿出来的一个类似于贬义词的自谦词，举个比较通俗一点的例子，就是范冰冰。之前她一直是属于狐狸精、小三儿、花瓶这样的角色，可是忽然当她出现角色转变的时候就是范爷，女汉子，为什么？她为什么没有中间的地带？
-
-- @讷言敏行的猪：
+- @TN_南南北北上的东西:
 
 ...
 
-在现代社会里，如果给女性一个工作，未必对她来说是好的，其中一个原因就是女性也要从家庭解放出来。所以现在变得我跟我爱人我们家里的家务、教育子女我们是共担的，我做一半，他也做一半，我们都各尽所能去做，至少是我，有了更多自己的时间，比如我可以这么远参加一个读书会，这是一个很大的收获。
+络上的一些东西,我觉得女汉子这个词不得不说,这个词其实挺可悲的,它算是一个女性不得不拿出来的一个类似于贬义词的自谦词,举个比较通俗一点的例子,就是范冰冰. 之前她一直是属于狐狸精,小三儿,花瓶这样的角色,可是忽然当她出现角色转变的时候就是范爷,女汉子,为什么?她为什么没有中间的地带?
+
+- @讷言敏行的猪:
 
 ...
 
--  @AaronShen：
+在现代社会里,如果给女性一个工作,未必对她来说是好的,其中一个原因就是女性也要从家庭解放出来. 所以现在变得我跟我爱人我们家里的家务,教育子女我们是共担的,我做一半,他也做一半,我们都各尽所能去做,至少是我,有了更多自己的时间,比如我可以这么远参加一个读书会,这是一个很大的收获. 
 
 ...
 
-对于我们学计算机的来说，其实女博士非常多，我们经常会讨论，她们的一个思想，什么样的人能找到最好的另一半，是极度聪明，她们知道我的知识体系完全和男生没有什么差别，我的智力和知识，但是我一定要知道，无论在家庭和社会，还是在这个社会面前，我知道要给男人面子，要知道怎么撑场面，要知道这个东西。你如果知道这个，你就是游刃有余的，就是得厅堂，下得厨房。我们这个圈子里面真的是女汉子的代表，既能写程序、出去谈项目，还能挣钱，所以这个反差特别明显。
+-  @AaronShen:
+
+...
+
+对于我们学计算机的来说,其实女博士非常多,我们经常会讨论,她们的一个思想,什么样的人能找到最好的另一半,是极度聪明,她们知道我的知识体系完全和男生没有什么差别,我的智力和知识,但是我一定要知道,无论在家庭和社会,还是在这个社会面前,我知道要给男人面子,要知道怎么撑场面,要知道这个东西. 你如果知道这个,你就是游刃有余的,就是得厅堂,下得厨房. 我们这个圈子里面真的是女汉子的代表,既能写程序,出去谈项目,还能挣钱,所以这个反差特别明显. 
 
 ...
 
 
-- @蕴伽：
+- @蕴伽:
 
-我觉得那个女应该去掉，男女都一样，没有男女之分，女的要献媚男的，男的也要阿谀奉承才能得到自己想要的东西，都是一样的，没有男女之分。大家都在这个社会里面，都要靠自己得到自己想要的，关键是你想要什么。
-
-...
-
-- @出版人Sophie：
+我觉得那个女应该去掉,男女都一样,没有男女之分,女的要献媚男的,男的也要阿谀奉承才能得到自己想要的东西,都是一样的,没有男女之分. 大家都在这个社会里面,都要靠自己得到自己想要的,关键是你想要什么. 
 
 ...
 
-我提一个问题，像男女的话，是根据生理去分还是根据心理去分？我一直搞不清楚，所以觉得这个问题很难回答。
+- @出版人Sophie:
 
 ...
 
--  @啤酒黄永：
+我提一个问题,像男女的话,是根据生理去分还是根据心理去分?我一直搞不清楚,所以觉得这个问题很难回答. 
+
 ...
 
-其实我想说的，角色并不是那么简单。就是说男人做了女人的事情就是对得起女人或者看得起女人，或者怎么样，反过来也一样的。所以其实我觉得我倒同意杨早在微信里说的一句话，或者文章里说的一句话，其实你具体到男女相处，处得好，其实是完全是两个个体做非常个案的这种互相来商量，我们俩角色应该是什么样的，而不存在普世性的说男人的角色和女人的角色怎么分工好，就可以相安无事了。
+-  @啤酒黄永:
+...
+
+其实我想说的,角色并不是那么简单. 就是说男人做了女人的事情就是对得起女人或者看得起女人,或者怎么样,反过来也一样的. 所以其实我觉得我倒同意杨早在微信里说的一句话,或者文章里说的一句话,其实你具体到男女相处,处得好,其实是完全是两个个体做非常个案的这种互相来商量,我们俩角色应该是什么样的,而不存在普世性的说男人的角色和女人的角色怎么分工好,就可以相安无事了. 
 
 
--  @杨早：
+-  @杨早:
 
-你看所有的访谈采访一个男强人的时候就会说，我感谢我家庭的支持。采访女强人的时候她会说，我对不起我的家庭。
+你看所有的访谈采访一个男强人的时候就会说,我感谢我家庭的支持. 采访女强人的时候她会说,我对不起我的家庭. 
     
-- @沉醉寒冬：
+- @沉醉寒冬:
 
-这个歧视的问题感觉根深蒂固的，没法挽救了，就像啤酒黄永说的，男女平等根本就是瞎扯，做的任何努力都是白搭的。比如好多人谈才女，谈女子无才便是德，或者批评孝顺。比如大家找对象的时候男的可能写要贤惠的，要温柔贤惠，或者是孝敬父母，这些都被人批过，大家都已经习惯了，为什么要加这些东西？女博士这个话题2007年就谈过了，7年过去了，没有任何改变？这个一点不过时。
+这个歧视的问题感觉根深蒂固的,没法挽救了,就像啤酒黄永说的,男女平等根本就是瞎扯,做的任何努力都是白搭的. 比如好多人谈才女,谈女子无才便是德,或者批评孝顺. 比如大家找对象的时候男的可能写要贤惠的,要温柔贤惠,或者是孝敬父母,这些都被人批过,大家都已经习惯了,为什么要加这些东西?女博士这个话题2007年就谈过了,7年过去了,没有任何改变?这个一点不过时. 
 
 
-- @思无邪雨雪霏霏：
+- @思无邪雨雪霏霏:
 
-首先比如女士优先，我觉得有些东西应该回到人类本初，比如泰坦尼克上，是不是女人和孩子先下船，这应该也是一种女士优先吧？包括老人优先或者弱者优先，这应该是人的本初就应该是如此。我觉得比如说女士优先，男士帮女士扶下门，这是基本的绅士和礼仪，这是教养问题，什么歧视和讨好没关系，我觉得很混乱。
-
-...
-
-一个社会如果和谐或者有审美感，就应该男人像男人，女人像女人，男人就该狩猎和奔跑，女人就应该温柔和照顾孩子，或者说我甘于被歧视或者怎么样，我觉得就是应该如此。少数民族不存在这些问题，他们是很自然的，就是日出而作，日落而息，大家唱歌跳舞，我觉得这就应该是这样的。所以首先讨厌女汉子这个称呼，我觉得这个称呼不美，女人就应该像女人。然后“汉子”这个词我也觉得不美，搁在男人身上我也觉得不美。
+首先比如女士优先,我觉得有些东西应该回到人类本初,比如泰坦尼克上,是不是女人和孩子先下船,这应该也是一种女士优先吧?包括老人优先或者弱者优先,这应该是人的本初就应该是如此. 我觉得比如说女士优先,男士帮女士扶下门,这是基本的绅士和礼仪,这是教养问题,什么歧视和讨好没关系,我觉得很混乱. 
 
 ...
 
-- @绿茶：
+一个社会如果和谐或者有审美感,就应该男人像男人,女人像女人,男人就该狩猎和奔跑,女人就应该温柔和照顾孩子,或者说我甘于被歧视或者怎么样,我觉得就是应该如此. 少数民族不存在这些问题,他们是很自然的,就是日出而作,日落而息,大家唱歌跳舞,我觉得这就应该是这样的. 所以首先讨厌女汉子这个称呼,我觉得这个称呼不美,女人就应该像女人. 然后"汉子"这个词我也觉得不美,搁在男人身上我也觉得不美. 
 
 ...
 
-女人在家里的这个角色真的不是你一个男人想要用某种方式能够替代的。所以我觉得，尤其回归到家庭这个小空间之内，女人是一个非常重要的。因为任何的家庭，女人的这种喜怒哀乐，各种的情绪转变，实际上是决定了这个家庭的整个的走向的，就是你这个家庭他的稳定、和谐、幸福，幸福指数，各种东西男人很难在这个细节方面掌控得好。所以我小孩要他妈妈的时候，我就觉得我真的是太弱小了。这么小的一个小家伙，你觉得你很有力量，或者你能给他依靠，但是他在那样一刻他只需要他妈妈，一个女性给他的这种一口奶也好，还是拥抱也好。我觉得女人在家庭里面那种不可替代性就体现出来了。
+- @绿茶:
+
+...
+
+女人在家里的这个角色真的不是你一个男人想要用某种方式能够替代的. 所以我觉得,尤其回归到家庭这个小空间之内,女人是一个非常重要的. 因为任何的家庭,女人的这种喜怒哀乐,各种的情绪转变,实际上是决定了这个家庭的整个的走向的,就是你这个家庭他的稳定,和谐,幸福,幸福指数,各种东西男人很难在这个细节方面掌控得好. 所以我小孩要他妈妈的时候,我就觉得我真的是太弱小了. 这么小的一个小家伙,你觉得你很有力量,或者你能给他依靠,但是他在那样一刻他只需要他妈妈,一个女性给他的这种一口奶也好,还是拥抱也好. 我觉得女人在家庭里面那种不可替代性就体现出来了. 
 
 
 ...
 
-- @李子Percylee：
+- @李子Percylee:
 
  ...
 
- 我之前在上中学的时候，很自然的萌发我喜欢的女性就是简爱那种类型，我特别喜欢这个女孩子，我看电影《心火》，苏菲玛索，她里面有一句台词一下打动我，她告诉她女儿，你一旦出嫁了你就成了丈夫的财产，但是你要是能会读书、能会认字，你的心灵是自由的。这个东西一下打动了我，这样的女性是我所喜欢的。
+ 我之前在上中学的时候,很自然的萌发我喜欢的女性就是简爱那种类型,我特别喜欢这个女孩子,我看电影<<心火>>,苏菲玛索,她里面有一句台词一下打动我,她告诉她女儿,你一旦出嫁了你就成了丈夫的财产,但是你要是能会读书,能会认字,你的心灵是自由的. 这个东西一下打动了我,这样的女性是我所喜欢的. 
 
  ...
 
@@ -120,65 +120,65 @@ tags:  issue summary
 
 ...
 
-有可能这是柴静自己某种主动的动机和兴趣。我举了一个例子，我在大肆宣传这个书店，希望更多的人了解，我觉得我出事的动机还是我自己的愿望和兴趣，并不是说我有一种营销的某种想去控制别人的原始动机。我不知道你们是不是理解我所说的话，这种表述的方式容易让被描述的这个人，当他如果没有这样的念想，哪怕就是几个措辞，导致误解的时候会产生不可辩解的处境。
+有可能这是柴静自己某种主动的动机和兴趣. 我举了一个例子,我在大肆宣传这个书店,希望更多的人了解,我觉得我出事的动机还是我自己的愿望和兴趣,并不是说我有一种营销的某种想去控制别人的原始动机. 我不知道你们是不是理解我所说的话,这种表述的方式容易让被描述的这个人,当他如果没有这样的念想,哪怕就是几个措辞,导致误解的时候会产生不可辩解的处境. 
 
 ...
 
-## @颜浩 曰：
+## @颜浩 曰:
 
-首先我觉得今天能参加这个活动，尤其是大家有很多是对于这个文章的一个回应，我也受到很多的启发。事实上，这篇文章其实并不是一个结论，这篇文章更多承载的是我自身对于女性处境的一个思考，甚至其中有很多困惑，所以大家也会发现，这个中间有一些矛盾的地方。刚才杨早引了我们在《话题2007》中讨论过的关于高知女性的想象这么一个问题，刚才引的那段话，那是我在2007年说的话。但是这7年以来，这个问题不断萦绕在我的心中，我也不断在思考这个问题，事实上我自己也不断面对这个困惑。
+首先我觉得今天能参加这个活动,尤其是大家有很多是对于这个文章的一个回应,我也受到很多的启发. 事实上,这篇文章其实并不是一个结论,这篇文章更多承载的是我自身对于女性处境的一个思考,甚至其中有很多困惑,所以大家也会发现,这个中间有一些矛盾的地方. 刚才杨早引了我们在<<话题2007>>中讨论过的关于高知女性的想象这么一个问题,刚才引的那段话,那是我在2007年说的话. 但是这7年以来,这个问题不断萦绕在我的心中,我也不断在思考这个问题,事实上我自己也不断面对这个困惑. 
 
-其实我做关于柴静的这个话题，最初我提交给《话题》的这个文章的题目并不叫这个题目，在我不知情的情况下被改成这个题目。大家觉得《话题》的题目要更有话题性一点，所以把柴静的“柴徽因”给特意拎出来了。其实柴静只是我研究的一个对象，只是作为一系列的女性问题，尤其是这一两年来一系列女性中间一个比较突出的一个点，就是由刚才绿茶老师也提到的，这应该是一两年来，涉及到女性相关的问题是非常多的。所以，这个是一个切入点。具体到我自己，我更想说的不是针对这一篇文章，而是我自己作为一个勉强算一个高知女性所感受到的一些困惑。而且是一些没有答案的困惑。
+其实我做关于柴静的这个话题,最初我提交给<<话题>>的这个文章的题目并不叫这个题目,在我不知情的情况下被改成这个题目. 大家觉得<<话题>>的题目要更有话题性一点,所以把柴静的"柴徽因"给特意拎出来了. 其实柴静只是我研究的一个对象,只是作为一系列的女性问题,尤其是这一两年来一系列女性中间一个比较突出的一个点,就是由刚才绿茶老师也提到的,这应该是一两年来,涉及到女性相关的问题是非常多的. 所以,这个是一个切入点. 具体到我自己,我更想说的不是针对这一篇文章,而是我自己作为一个勉强算一个高知女性所感受到的一些困惑. 而且是一些没有答案的困惑. 
 
-我首先说一个例子，这个事例之前曾经在我们师门聚会的时候说过，我跟杨早说过，另外这个事例也被我的导师陈平原先生经常拿来引用，半开玩笑半认真的用来告诫我之后的这些师妹们，这个事例来自我自身的亲身经验。刚才有两位提到了大龄剩女所受到的压力，实际上我本人长时期是一个大龄剩女，好在现在把自己嫁出去了，但是我当了很长时间的大龄剩女。那么我有过一些很奇特的相亲经验，不止于三次，但是我想特意指出这三次来。因为这三次太有代表性了，太刻骨铭心了。
+我首先说一个例子,这个事例之前曾经在我们师门聚会的时候说过,我跟杨早说过,另外这个事例也被我的导师陈平原先生经常拿来引用,半开玩笑半认真的用来告诫我之后的这些师妹们,这个事例来自我自身的亲身经验. 刚才有两位提到了大龄剩女所受到的压力,实际上我本人长时期是一个大龄剩女,好在现在把自己嫁出去了,但是我当了很长时间的大龄剩女. 那么我有过一些很奇特的相亲经验,不止于三次,但是我想特意指出这三次来. 因为这三次太有代表性了,太刻骨铭心了. 
 
-第一次，应该是博士刚毕业，有人做介绍，大姐大妈很多人愿意做介绍。第一次做的介绍，那个对象听说了我的这个身份以后，他就立即拒绝了。他说，她是个博士，我只是个硕士，这是不可能的。还没有说我这个人是个什么人，就立即拒绝了。
+第一次,应该是博士刚毕业,有人做介绍,大姐大妈很多人愿意做介绍. 第一次做的介绍,那个对象听说了我的这个身份以后,他就立即拒绝了. 他说,她是个博士,我只是个硕士,这是不可能的. 还没有说我这个人是个什么人,就立即拒绝了. 
 
-第二次，是在这个之后不久，也是同一个介绍人，介绍人大概是吸取了之前那个经验教训，她这一次找的是一个博士，她觉得这个是门当户对了，但是呢，也同样是没有见面。因为那个男博士也是第一下就把我否定了。否定的原因他说，他是一个不怎么好的一个学校的博士，而我是一个名牌大学的一个博士，以后俩人肯定是不好相处的，在家庭当中绝对是一个强势，这显然是一个想象，因为当时没有见过面。所以这一次也被否认了。
+第二次,是在这个之后不久,也是同一个介绍人,介绍人大概是吸取了之前那个经验教训,她这一次找的是一个博士,她觉得这个是门当户对了,但是呢,也同样是没有见面. 因为那个男博士也是第一下就把我否定了. 否定的原因他说,他是一个不怎么好的一个学校的博士,而我是一个名牌大学的一个博士,以后俩人肯定是不好相处的,在家庭当中绝对是一个强势,这显然是一个想象,因为当时没有见过面. 所以这一次也被否认了. 
 
-中间经过了一些曲折之后有了第三次，但不是同一个人做的介绍。这个人也听说过之前的说法，所以他找了一个名牌大学的男博士，他认为这个肯定是没有问题了。但是这次依然是没有见面。原因也是对方听说我的情况，然后说不行，因为她是名牌大学的名导师的学生，我虽然是个名牌大学毕业的，但并不是什么出名的导师的学生，所以这个肯定是没办法达成的。
+中间经过了一些曲折之后有了第三次,但不是同一个人做的介绍. 这个人也听说过之前的说法,所以他找了一个名牌大学的男博士,他认为这个肯定是没有问题了. 但是这次依然是没有见面. 原因也是对方听说我的情况,然后说不行,因为她是名牌大学的名导师的学生,我虽然是个名牌大学毕业的,但并不是什么出名的导师的学生,所以这个肯定是没办法达成的. 
 
-当然我不知道是否这是一个借口还是什么别的原因，我把这个非常委屈的告诉我导师陈平原先生，因为他阻碍了我的相亲路。陈老师对此谨记在心，每次有师妹来到他的家里，他就会问，你恋爱了吗？你不要说是我的学生啊。
+当然我不知道是否这是一个借口还是什么别的原因,我把这个非常委屈的告诉我导师陈平原先生,因为他阻碍了我的相亲路. 陈老师对此谨记在心,每次有师妹来到他的家里,他就会问,你恋爱了吗?你不要说是我的学生啊. 
 
-我想说这是个人的一个体验，确实对于女性问题的思考对于我来说有很长的一个过程，我自己也在经过一些不断地思考和反复。曾经我有过非常愤怒的时候，当然，这三次介绍都让我产生了愤怒的情绪。而且在这个过程中间，比如说面对家庭的这个压力，面对父母旁人的这样一些压力，尤其是我的老家是在一个三线城市，大家可能知道，三线城市中人是生活在舌尖之上的，父母所承受的压力就会转移到自己身上，所以确实，我有过非常愤怒的时候，也说过不结婚又怎么样这样的话。但是现在我要说的是，虽然我结了婚了，不生孩子又怎么样，这是父母关注的第二个问题了。
+我想说这是个人的一个体验,确实对于女性问题的思考对于我来说有很长的一个过程,我自己也在经过一些不断地思考和反复. 曾经我有过非常愤怒的时候,当然,这三次介绍都让我产生了愤怒的情绪. 而且在这个过程中间,比如说面对家庭的这个压力,面对父母旁人的这样一些压力,尤其是我的老家是在一个三线城市,大家可能知道,三线城市中人是生活在舌尖之上的,父母所承受的压力就会转移到自己身上,所以确实,我有过非常愤怒的时候,也说过不结婚又怎么样这样的话. 但是现在我要说的是,虽然我结了婚了,不生孩子又怎么样,这是父母关注的第二个问题了. 
 
-在这个愤怒之后呢，必然要把这种生活中的体验、生活中的愤怒感也好，这些情绪也好，划归到一个学术性的视野中加以思考。大家现在所看见的这篇不是那么很完美的文章，其实是我这些年来对于女性思考的一个结论，或者说是一个阶段性的结论。刚才听到诸位的发言，我觉得非常受到启发，中间也有一些观点上的不一致，我想这个观点的不一致恰恰就体现出了我们在无论是男性也好，还是女性也好，我们在生活中间面对非常复杂的性别问题的时候，每个人的感受是不一样的，有些人是出于自己在家庭中所承担的地位，有人可能出于自己在社会上所承担的一个地位，但是不管怎么样，因为大家各自不同的体验，事实也可以证明性别问题，我们姑且不说女性问题，就两性问题这原本就是一个所谓的人类历史，人类社会的重大的问题。几个基本问题之一。尤其是在我们这个价值观念在急剧转型的时候，每个人自身体验是不太一样的。我想这是很正常的一个现象。
+在这个愤怒之后呢,必然要把这种生活中的体验,生活中的愤怒感也好,这些情绪也好,划归到一个学术性的视野中加以思考. 大家现在所看见的这篇不是那么很完美的文章,其实是我这些年来对于女性思考的一个结论,或者说是一个阶段性的结论. 刚才听到诸位的发言,我觉得非常受到启发,中间也有一些观点上的不一致,我想这个观点的不一致恰恰就体现出了我们在无论是男性也好,还是女性也好,我们在生活中间面对非常复杂的性别问题的时候,每个人的感受是不一样的,有些人是出于自己在家庭中所承担的地位,有人可能出于自己在社会上所承担的一个地位,但是不管怎么样,因为大家各自不同的体验,事实也可以证明性别问题,我们姑且不说女性问题,就两性问题这原本就是一个所谓的人类历史,人类社会的重大的问题. 几个基本问题之一. 尤其是在我们这个价值观念在急剧转型的时候,每个人自身体验是不太一样的. 我想这是很正常的一个现象. 
 
-就我个人而言，无论在文章中间还是我将要思考下去的问题，就是为什么我会选择这个知女作为一个讨论的对象，这个其实是刚才所说的，不是要否定柴静或者批判她，我关心的是无论是她自己抱有这样一个愿望，还是她的团队在进行操作，我想关注的是她们为什么会，或者柴静自己，或者是她的团队为什么会按照这种方式来对她进行塑造，或者说柴静为什么会按照这种方式形塑自身。那么这种塑造的过程中间显然有某些因素在起作用。包括刚才邱老师所提到的那一点，就是为什么有很多的女性主持人也同样表现得非常不错，但是呢，她们为什么没有成为一个话题的对象呢？这恰恰是我所要关心的一个内容。
+就我个人而言,无论在文章中间还是我将要思考下去的问题,就是为什么我会选择这个知女作为一个讨论的对象,这个其实是刚才所说的,不是要否定柴静或者批判她,我关心的是无论是她自己抱有这样一个愿望,还是她的团队在进行操作,我想关注的是她们为什么会,或者柴静自己,或者是她的团队为什么会按照这种方式来对她进行塑造,或者说柴静为什么会按照这种方式形塑自身. 那么这种塑造的过程中间显然有某些因素在起作用. 包括刚才邱老师所提到的那一点,就是为什么有很多的女性主持人也同样表现得非常不错,但是呢,她们为什么没有成为一个话题的对象呢?这恰恰是我所要关心的一个内容. 
 
-我在这个开篇曾经引了南都周刊的知女专栏中间列出的五个特质，柴静还有其他四个知女，但似乎知女现在变成柴静一个人的代名词，但是还列了其他四个女性作为所谓的知识女神的一个代表，是因为她们基本上完全符合所谓女神的一些特质，而其他的一些女性，比如像洪晃，比如像闾丘露薇，还有像伊能静等其他什么人，还有无法成为女神的一些女性，她们有全部或者部分不符合设定，但是这种设定并不是我们对于女性的唯一标准，但这种设定背后却隐含着某种心态，这个心态恰恰是我所关注的这样一个话题。
+我在这个开篇曾经引了南都周刊的知女专栏中间列出的五个特质,柴静还有其他四个知女,但似乎知女现在变成柴静一个人的代名词,但是还列了其他四个女性作为所谓的知识女神的一个代表,是因为她们基本上完全符合所谓女神的一些特质,而其他的一些女性,比如像洪晃,比如像闾丘露薇,还有像伊能静等其他什么人,还有无法成为女神的一些女性,她们有全部或者部分不符合设定,但是这种设定并不是我们对于女性的唯一标准,但这种设定背后却隐含着某种心态,这个心态恰恰是我所关注的这样一个话题. 
 
-那么，具体到刚才诸位所讨论的男女两性的问题的时候，其实我比较赞同刚才啤酒黄永所提出的那一点，就是“男女都一样”，事实上是一个性别歧视的概念。因为“男女都一样”这个观念的提出，我们在五六十年代出现过铁姑娘队队长这样的一个被文学和艺术所塑造出来的形象，它要求的是女性要承担起和男性完全一样的社会工作和社会职责，而且这个更多的体现在身体和生理这样一个方面，我更想强调的是，男女平等这个观念并不表现在男女都一样，而恰恰是应该尊重男女之间的不一样。但是呢，这种不一样并不表示着一种高下之间的差别，而是不同的类型的一种体现，这两者之间是没有高下之分的，他们虽然是不同的，但并不是不平等的。所以我更强调的是，男女平等这样一个概念。在这个概念之下呢，我觉得我不太能够接受男性应该怎样，和女性应该怎样这样一个说法，女性应该怎样，女性应该是比如说承担起家庭的这个职责，而男性可以少承担一点，男性更应该是一个社会属性的人，女性作为一个贤妻良母是她应该承担的身份。我对这点不太赞成，这个是男女不平等的一个表现。这是我的一个观点。
+那么,具体到刚才诸位所讨论的男女两性的问题的时候,其实我比较赞同刚才啤酒黄永所提出的那一点,就是"男女都一样",事实上是一个性别歧视的概念. 因为"男女都一样"这个观念的提出,我们在五六十年代出现过铁姑娘队队长这样的一个被文学和艺术所塑造出来的形象,它要求的是女性要承担起和男性完全一样的社会工作和社会职责,而且这个更多的体现在身体和生理这样一个方面,我更想强调的是,男女平等这个观念并不表现在男女都一样,而恰恰是应该尊重男女之间的不一样. 但是呢,这种不一样并不表示着一种高下之间的差别,而是不同的类型的一种体现,这两者之间是没有高下之分的,他们虽然是不同的,但并不是不平等的. 所以我更强调的是,男女平等这样一个概念. 在这个概念之下呢,我觉得我不太能够接受男性应该怎样,和女性应该怎样这样一个说法,女性应该怎样,女性应该是比如说承担起家庭的这个职责,而男性可以少承担一点,男性更应该是一个社会属性的人,女性作为一个贤妻良母是她应该承担的身份. 我对这点不太赞成,这个是男女不平等的一个表现. 这是我的一个观点. 
 
-因为可能有一些细节的问题跟大家想法不是太一样，但是这个无关痛痒，所以我想说的是，这确实是一个非常值得讨论的问题，从2007年我们讨论高知女性被凝视的现象到今年的女博与女士，实际上我之前还写过相亲会，刚才是哪位提到相亲会的问题，相亲会我们在2005年就关注了，那个时候我去中山公园考察过这个事情。我们话题做了这么多年，八年了，关于女性问题其实把相亲会加上已经有三次了，应该说性别问题确实是一个非常值得关注的这么一个问题。所以从今天诸位的发言中间我觉得受益匪浅，我想对于以后完善自己的思考应该是非常有帮助的。
+因为可能有一些细节的问题跟大家想法不是太一样,但是这个无关痛痒,所以我想说的是,这确实是一个非常值得讨论的问题,从2007年我们讨论高知女性被凝视的现象到今年的女博与女士,实际上我之前还写过相亲会,刚才是哪位提到相亲会的问题,相亲会我们在2005年就关注了,那个时候我去中山公园考察过这个事情. 我们话题做了这么多年,八年了,关于女性问题其实把相亲会加上已经有三次了,应该说性别问题确实是一个非常值得关注的这么一个问题. 所以从今天诸位的发言中间我觉得受益匪浅,我想对于以后完善自己的思考应该是非常有帮助的. 
 
 ...
 
 ## 自由讨论
 
-- @杨早：
+- @杨早:
 
-这是不太一样的选择，把性别作为一个因素提出来这是一个现实，同时又是一个并不应该存在的现实。按照我们的想法，对个体来说，如果没有任何本质的看法，我们应该根据个体的愿望和能力选择她，不根据她是不是女性来做这个决断。...
+这是不太一样的选择,把性别作为一个因素提出来这是一个现实,同时又是一个并不应该存在的现实. 按照我们的想法,对个体来说,如果没有任何本质的看法,我们应该根据个体的愿望和能力选择她,不根据她是不是女性来做这个决断. ...
 
-大家看《纸牌屋》就知道，当那个女记者发头版以后，以前的首席记者就会说，首席也是女的，女的对女的，说你一定是跟哪个重要的人睡觉了，不然你不可能知道这些。这种揣测我们太熟悉了，对吧？包括如果一个女学者，长得还可以，她又比较快的上升，大家会特别关注她的导师。一个导师爱才，对男生提携的话没有问题，如果提携一个女弟子，一般就会觉得你们之间必有问题。这就导致出台规定什么男领导不能配女秘书，还有的男导师坚决不愿意带女学生，带女学生很麻烦。就是类似这样的问题。
+大家看<<纸牌屋>>就知道,当那个女记者发头版以后,以前的首席记者就会说,首席也是女的,女的对女的,说你一定是跟哪个重要的人睡觉了,不然你不可能知道这些. 这种揣测我们太熟悉了,对吧?包括如果一个女学者,长得还可以,她又比较快的上升,大家会特别关注她的导师. 一个导师爱才,对男生提携的话没有问题,如果提携一个女弟子,一般就会觉得你们之间必有问题. 这就导致出台规定什么男领导不能配女秘书,还有的男导师坚决不愿意带女学生,带女学生很麻烦. 就是类似这样的问题. 
 
 ...
 
-- @杨早：性别争议甚至战争是不可避免的，关键在于说这个社会有多少人、或者有哪些人提出不满。我举一个例子，包括所有的这些女性主义者，不婚、丁克的我不说，只要是结婚的，我还没有见到谁对小孩“冠夫姓”有特别大的拒绝的？好像大家都是承认了这一点的。
+- @杨早:性别争议甚至战争是不可避免的,关键在于说这个社会有多少人,或者有哪些人提出不满. 我举一个例子,包括所有的这些女性主义者,不婚,丁克的我不说,只要是结婚的,我还没有见到谁对小孩"冠夫姓"有特别大的拒绝的?好像大家都是承认了这一点的. 
 
 ..
 
-- @AaronShen：这种问题太多了，三线、四线城市整个知识的传播体系都是在女性舌尖上，都是熟人社会。所以特别是在刚才说的男女的职业上有没有差距，你可以去稍微了解一下，比如做HR，做人力资源的，她们的勾心斗角，相互诋毁，太多了，这个例子太多了。
+- @AaronShen:这种问题太多了,三线,四线城市整个知识的传播体系都是在女性舌尖上,都是熟人社会. 所以特别是在刚才说的男女的职业上有没有差距,你可以去稍微了解一下,比如做HR,做人力资源的,她们的勾心斗角,相互诋毁,太多了,这个例子太多了. 
 
 
 ...
 
-- @绿茶：我曾经在一个团队，这是很小的编辑团队，以GAY和拉拉为主，所以我没有这样的经历的人，就是觉得没有底气。我们在一起讨论选题的时候，他们的选题我总认为很怪，很不合常理。但是，他们更有说服力你知道吗？你自己没有底气，我总觉得我的选题有点哆哆嗦嗦，或者太大众化了，大家都这么做，感觉他们的选题更牛B，更凸现出一种别样的气质。
+- @绿茶:我曾经在一个团队,这是很小的编辑团队,以GAY和拉拉为主,所以我没有这样的经历的人,就是觉得没有底气. 我们在一起讨论选题的时候,他们的选题我总认为很怪,很不合常理. 但是,他们更有说服力你知道吗?你自己没有底气,我总觉得我的选题有点哆哆嗦嗦,或者太大众化了,大家都这么做,感觉他们的选题更牛B,更凸现出一种别样的气质. 
 
 ...
 
-- @Yellowflying：男女两性的关系总是有一个基础，随着社会的生产力是不断向前推进的，包括社会的结构的演化是往前推进的，所有的两性关系都是从一个不适合的状态慢慢到适合的状态发展。但是适合之后社会又会向前发展，这是不停往前滚动的过程，永远达不到平衡的状态。
+- @Yellowflying:男女两性的关系总是有一个基础,随着社会的生产力是不断向前推进的,包括社会的结构的演化是往前推进的,所有的两性关系都是从一个不适合的状态慢慢到适合的状态发展. 但是适合之后社会又会向前发展,这是不停往前滚动的过程,永远达不到平衡的状态. 
 
 ...
-- @杨早：社会是这样的，总是在动态的，否则的话就归零了，但是这好像不能成为我们安于现状的理由。
-    我们今天就到这里吧。
+- @杨早:社会是这样的,总是在动态的,否则的话就归零了,但是这好像不能成为我们安于现状的理由. 
+    我们今天就到这里吧. 
