--- a/_posts/2014-03-18-rn22-6.md
+++ b/_posts/2014-03-18-rn22-6.md
@@ -10,82 +10,82 @@ tags:  issue summary
 
 [女博和女士 | Reader as Neighbor ;-)](http://yuedulinju.com/2014-03/woman/)
 
-时间：2014年3月1日
+时间:2014年3月1日
 
-地点：读易洞
+地点:读易洞
 
-书目：《话题2013》
+书目:<<话题2013>>
 
-（6）邱小石自称大男子主义   
+(6)邱小石自称大男子主义   
 
-@李子Percylee：我再说我对这个书里面的看法，这个里面我觉得我最明显的一个感受是，我们在讨论女性的时候，有了很多女性属性的这种框定词，形容词，表述方式也好。但这种方式我觉得应该先退一步，我们先回到我们作为人，比如这里面有两个例子：
+@李子Percylee:我再说我对这个书里面的看法,这个里面我觉得我最明显的一个感受是,我们在讨论女性的时候,有了很多女性属性的这种框定词,形容词,表述方式也好. 但这种方式我觉得应该先退一步,我们先回到我们作为人,比如这里面有两个例子:
 
-第一个例子就是说，讲柴静是淡然的，不争的，她营造这样一个东西，觉得她是女神。但是换句话，如果把性别属性隐掉，柴静不是女人，而是一个人，一个男人，他是担任的，他有这样的观点，有采访的视角我们会怎么看这个事情？我们还会觉得她是故意营造的吗？还是柴静自己喜欢这样做呢？她本人愿意这追求这个事情吗？所以这是让我觉得好玩的时候。
+第一个例子就是说,讲柴静是淡然的,不争的,她营造这样一个东西,觉得她是女神. 但是换句话,如果把性别属性隐掉,柴静不是女人,而是一个人,一个男人,他是担任的,他有这样的观点,有采访的视角我们会怎么看这个事情?我们还会觉得她是故意营造的吗?还是柴静自己喜欢这样做呢?她本人愿意这追求这个事情吗?所以这是让我觉得好玩的时候. 
 
-再一个“砍柴”的时候，当然是有人在“砍柴”，对不对？“砍柴”的做法专门还有一个点，就是说柴知女引经据典的文化资本和优秀的性别资本起源于老男人端茶递水做小妹妹状。用这样的视角去“砍柴”的话，把这段话换成一个男人，一个男人呢，刚到一个场合里边，别的都是老男人，我进入这个场合，我对大家尊重，愿意做这样的服务，你会认为这个事情做的OK，没有问题。为什么柴静这样做就会有问题？
+再一个"砍柴"的时候,当然是有人在"砍柴",对不对?"砍柴"的做法专门还有一个点,就是说柴知女引经据典的文化资本和优秀的性别资本起源于老男人端茶递水做小妹妹状. 用这样的视角去"砍柴"的话,把这段话换成一个男人,一个男人呢,刚到一个场合里边,别的都是老男人,我进入这个场合,我对大家尊重,愿意做这样的服务,你会认为这个事情做的OK,没有问题. 为什么柴静这样做就会有问题?
 
 
 
-@绿茶：这一点其实不是这样的，柴静和这些老男人在一起的饭局我也参加过几次，可能不是这样的角色，就是他们在一起还是正常的饭局的模式。
-
- 
-
-@李子Percylee：这个表述是有问题的，我们这样描述女性去表达你自己的想法其实是立不住脚的。我们每个人都要奋斗和努力做，体现它的价值，都会有个体的背景差异所带来的过程，这个过程要是男人也会这么做，就像刚才说的，我们也会这样做，这个是很正常的事。除了女性属性的表述方式，还有一种群体的表述方式。到底是群体还是个体？柴静的呈现方式，她自己对外的采访所释放的是她自己做出来的还是她喜欢的？还是兼而有之，还是完全没有自己的个人意愿，我觉得应该是有的，当然我没有什么材料证明。这是柴静自己个体的一种选择，而不是我们所想象的一个团队故意营造这个东西，这个占主要的东西，不一定的。
+@绿茶:这一点其实不是这样的,柴静和这些老男人在一起的饭局我也参加过几次,可能不是这样的角色,就是他们在一起还是正常的饭局的模式. 
 
  
 
-@邱小石：我跟李子的观念很相近，包括对于这篇文章里面描述的柴静的那段。尤其读到这一段的时候，我是重复李子的观念，就是“柴静及其团队敏感的抓住了这种价值导向，其公共策略与营销手段促成柴静的形象。柴静努力打造并维持自己形象，并将其当成最大的社会资本，她对绯闻采取默许和控制并用的方式，使其转化为可兹利用的个人资源”，就是这一段我觉得我们一直以来包括我看到很多微博上的各种各样的争论，我觉得这种语言的方式可能容易引起误解，容易引起误读。就是说我赞成李子的很核心的观点，就是有可能这是柴静自己某种主动的动机和兴趣。我举了一个例子，我在大肆宣传这个书店，希望更多的人了解，我觉得我出事的动机还是我自己的愿望和兴趣，并不是说我有一种营销的某种想去控制别人的原始动机。我不知道你们是不是理解我所说的话，这种表述的方式容易让被描述的这个人，当他如果没有这样的念想，哪怕就是几个措辞，导致误解的时候会产生不可辩解的处境。经常我看到微博里面很多争论就是由这些表述上的某种判断导致的想象，有这么一种概念和感觉。
-
-因此，说到柴静，说到这种“砍柴”，刚才也说了很多这方面的问题。总得来讲，我们换一个话来讲，如果没有这个人，还有很多女主持人，为什么她会受到更多的追捧，这里面各种各样的存在都是我们希望的，并不是说好像枪打一个出头鸟，或者一个人由于她的某种可能特别突出的一点受到了更多的关注。所以我觉得这里面可能会带有我们很多很强烈的某种感情，跟她自己做的事情其实是一样的，就是希望能够创造一些不一样的问题和话题。这是我个人某种看法。
-
-至于回到那个家庭中女性的地位、角色，还有在整个女性在社会中所承担的角色，我觉得这个里面可能都是刚才大家谈到的很多话题，为什么我混乱呢？混乱就来自因为我觉得很多时候我是个大男子主义者，但是本质上讲我又特别怕老婆，因此，这里面是什么呢？都是矛盾性的，不是铁板一块，不是非黑即白，就是刚才谈到的是不是对母亲更恋，还是跟父亲更恋。
+@李子Percylee:这个表述是有问题的,我们这样描述女性去表达你自己的想法其实是立不住脚的. 我们每个人都要奋斗和努力做,体现它的价值,都会有个体的背景差异所带来的过程,这个过程要是男人也会这么做,就像刚才说的,我们也会这样做,这个是很正常的事. 除了女性属性的表述方式,还有一种群体的表述方式. 到底是群体还是个体?柴静的呈现方式,她自己对外的采访所释放的是她自己做出来的还是她喜欢的?还是兼而有之,还是完全没有自己的个人意愿,我觉得应该是有的,当然我没有什么材料证明. 这是柴静自己个体的一种选择,而不是我们所想象的一个团队故意营造这个东西,这个占主要的东西,不一定的. 
 
  
 
-@杨早：你的大男子主义表现在什么地方？
+@邱小石:我跟李子的观念很相近,包括对于这篇文章里面描述的柴静的那段. 尤其读到这一段的时候,我是重复李子的观念,就是"柴静及其团队敏感的抓住了这种价值导向,其公共策略与营销手段促成柴静的形象. 柴静努力打造并维持自己形象,并将其当成最大的社会资本,她对绯闻采取默许和控制并用的方式,使其转化为可兹利用的个人资源",就是这一段我觉得我们一直以来包括我看到很多微博上的各种各样的争论,我觉得这种语言的方式可能容易引起误解,容易引起误读. 就是说我赞成李子的很核心的观点,就是有可能这是柴静自己某种主动的动机和兴趣. 我举了一个例子,我在大肆宣传这个书店,希望更多的人了解,我觉得我出事的动机还是我自己的愿望和兴趣,并不是说我有一种营销的某种想去控制别人的原始动机. 我不知道你们是不是理解我所说的话,这种表述的方式容易让被描述的这个人,当他如果没有这样的念想,哪怕就是几个措辞,导致误解的时候会产生不可辩解的处境. 经常我看到微博里面很多争论就是由这些表述上的某种判断导致的想象,有这么一种概念和感觉. 
+
+因此,说到柴静,说到这种"砍柴",刚才也说了很多这方面的问题. 总得来讲,我们换一个话来讲,如果没有这个人,还有很多女主持人,为什么她会受到更多的追捧,这里面各种各样的存在都是我们希望的,并不是说好像枪打一个出头鸟,或者一个人由于她的某种可能特别突出的一点受到了更多的关注. 所以我觉得这里面可能会带有我们很多很强烈的某种感情,跟她自己做的事情其实是一样的,就是希望能够创造一些不一样的问题和话题. 这是我个人某种看法. 
+
+至于回到那个家庭中女性的地位,角色,还有在整个女性在社会中所承担的角色,我觉得这个里面可能都是刚才大家谈到的很多话题,为什么我混乱呢?混乱就来自因为我觉得很多时候我是个大男子主义者,但是本质上讲我又特别怕老婆,因此,这里面是什么呢?都是矛盾性的,不是铁板一块,不是非黑即白,就是刚才谈到的是不是对母亲更恋,还是跟父亲更恋. 
 
  
 
-@邱小石：比如我举个例子，大男子主义，比如杨早为什么老来参加阅读邻居，而不是在家带小孩？为什么是阮丛在守这个书店？为什么不是我在守书店？她可能是很自然的、没有选择的，天然的，不是一个主动的，但是我觉得好像就是天性里面的大男子主义呈现出来的一种生活状态，跟天意有关系。
+@杨早:你的大男子主义表现在什么地方?
 
  
 
-@杨早：这是你选择的吗？
+@邱小石:比如我举个例子,大男子主义,比如杨早为什么老来参加阅读邻居,而不是在家带小孩?为什么是阮丛在守这个书店?为什么不是我在守书店?她可能是很自然的,没有选择的,天然的,不是一个主动的,但是我觉得好像就是天性里面的大男子主义呈现出来的一种生活状态,跟天意有关系. 
 
  
 
-@邱小石：你是选择的吗？
+@杨早:这是你选择的吗?
 
  
 
-@杨早：我不是。不是我选择的，是我老婆选择的。它是一个妥协和磨合后的一个结果，不完美，但就是这个样子的。但是并不是我内心选择的一个结果。
-
-我没有说内心想选择什么样，在这个问题上我是比较被动的，但是我内心来说，我觉得没有什么可能不会发生的。假如正好我太太是一个在外面很活跃的人，或者她对主持读书会很在行，我不排除我能够承担她那个责任的可能性。
+@邱小石:你是选择的吗?
 
  
 
-@李好多：我们几个女性朋友在一块儿活动，我们出去玩儿就杨早在家带小孩。
+@杨早:我不是. 不是我选择的,是我老婆选择的. 它是一个妥协和磨合后的一个结果,不完美,但就是这个样子的. 但是并不是我内心选择的一个结果. 
+
+我没有说内心想选择什么样,在这个问题上我是比较被动的,但是我内心来说,我觉得没有什么可能不会发生的. 假如正好我太太是一个在外面很活跃的人,或者她对主持读书会很在行,我不排除我能够承担她那个责任的可能性. 
 
  
 
-@邱小石：绿茶的选择就完全不一样。
+@李好多:我们几个女性朋友在一块儿活动,我们出去玩儿就杨早在家带小孩. 
 
  
 
-@杨早：他有一个没有说出来的隐形理由，他当时太太是体制内，他是体制外。这就是谁辞职的问题，体制内辞职很麻烦，体制外辞职成本会小很多。这个都是不同的因素，跟性别没有关系。
+@邱小石:绿茶的选择就完全不一样. 
 
  
 
-@邱小石：关于大男子主义还有，以前我老婆工作的时候也出差，她出差很久了我就会不高兴，这个算大男子主义吗？
+@杨早:他有一个没有说出来的隐形理由,他当时太太是体制内,他是体制外. 这就是谁辞职的问题,体制内辞职很麻烦,体制外辞职成本会小很多. 这个都是不同的因素,跟性别没有关系. 
 
  
 
-@杨早：当然不算，因为你自己也不愿意出差啊。
+@邱小石:关于大男子主义还有,以前我老婆工作的时候也出差,她出差很久了我就会不高兴,这个算大男子主义吗?
 
  
 
-@邱小石：但是她容忍我出差啊。
+@杨早:当然不算,因为你自己也不愿意出差啊. 
 
  
 
-@杨早：那是因为你对她的依赖比她对你的依赖要强。这个不是说不对，就算是我们家也是这样，我离开两天，太太带小孩肯定很辛苦，但她能HOLD住。如果她离开两天，我可能HOLD不住，这个是一个能力问题，不光是主观的问题。
+@邱小石:但是她容忍我出差啊. 
+
+ 
+
+@杨早:那是因为你对她的依赖比她对你的依赖要强. 这个不是说不对,就算是我们家也是这样,我离开两天,太太带小孩肯定很辛苦,但她能HOLD住. 如果她离开两天,我可能HOLD不住,这个是一个能力问题,不光是主观的问题. 
