--- a/_posts/2014-03-01-woman.md
+++ b/_posts/2014-03-01-woman.md
@@ -2,6 +2,7 @@
 layout: post
 title: 女博和女士
 description: 总第22期
+author: zoomq
 categories: 阅读邻居
 tags:  issue summary
 ---
@@ -18,7 +19,7 @@ tags:  issue summary
 - 报名:限12人
 - 嘉宾:@杨早,@邱小石,@Yellowflying,@乔庄皮皮,@AaronShen,@蕴伽,@出版人Sophie,@半价优惠,@澜雨,@TN_南南北北上的东西,@啤酒黄永,@半价优惠爱人,@绿茶,@淑婵想,@沉醉寒冬,@思无邪雨雪霏霏,@刘倩,@李子Percylee,@李好多,@颜浩,@讷言敏行的猪,@Jingleling晶
 
-
+<!--more-->
 
 # 节略
 @杨早:欢迎大家来到马年第一期的阅读邻居. 今天小石发公微的时候说每年我们都是以话题开场的,所以这变成了一个惯例,或者变成了一个节目,一个仪式. 
