--- a/_posts/2014-03-18-rn22-6.md
+++ b/_posts/2014-03-18-rn22-6.md
@@ -1,6 +1,7 @@
 ---
 layout: post
 title: 阅读邻居22期-6-交流
+author: zoomq
 categories: 阅读邻居
 tags:  issue summary
 ---
@@ -19,6 +20,8 @@ tags:  issue summary
 (6)邱小石自称大男子主义   
 
 @李子Percylee:我再说我对这个书里面的看法,这个里面我觉得我最明显的一个感受是,我们在讨论女性的时候,有了很多女性属性的这种框定词,形容词,表述方式也好. 但这种方式我觉得应该先退一步,我们先回到我们作为人,比如这里面有两个例子:
+
+<!--more-->
 
 第一个例子就是说,讲柴静是淡然的,不争的,她营造这样一个东西,觉得她是女神. 但是换句话,如果把性别属性隐掉,柴静不是女人,而是一个人,一个男人,他是担任的,他有这样的观点,有采访的视角我们会怎么看这个事情?我们还会觉得她是故意营造的吗?还是柴静自己喜欢这样做呢?她本人愿意这追求这个事情吗?所以这是让我觉得好玩的时候. 
 
