--- a/_posts/2014-03-22-rn23-books.md
+++ b/_posts/2014-03-22-rn23-books.md
@@ -1,6 +1,7 @@
 ---
 layout: post
 title: 阅读邻居23期-误解与错位-荐书
+author: zoomq
 categories: 阅读邻居
 tags:  issue summary
 ---
@@ -16,7 +17,7 @@ tags:  issue summary
 嘉宾:@杨早,@绿茶,@邱小石,@纸  物语,@寂三七,@蕴伽,@Zoom.Quiet,@沉醉寒冬,@呐言敏行的猪,@皮特慢慢地用,@北京刘柠,@布老鼠119,@半价优惠,@AaronShen,刘俊,liyuzheng,林彤,@淑婵想
 
 @杨早:欢迎大家来到第23期的阅读邻居,这期我们的主题叫做"误解与错位",阅读书目是<<中日之间>>,很高兴请到<<中日之间>>作者@北京刘柠 老师. 中日之间,关于这个主题和这个书的意涵待会儿再说,按照程序,先开始荐书的环节,每人用两三分钟时间推荐跟大家分享的一到两本书,目的是让大家听完你说话就去看这本书或者买这本书,这是最高的境界. 随便,不一定新书,旧书也可以. 甚至我们很贴心的准备了"不推荐",如果你实在想不出来推荐的也可以帮大家杀虫,说我这书实在不推荐,千万不要看,也可以. 
-
+<!--more-->
 ## 荐书
 
 ![](http://tp4.sinaimg.cn/1194991743/30/1279875308/1)
