--- a/_posts/2014-03-26-rn23-books2.md
+++ b/_posts/2014-03-26-rn23-books2.md
@@ -1,6 +1,7 @@
 ---
 layout: post
 title: 阅读邻居23期-误解与错位-荐书2
+author: zoomq
 categories: 阅读邻居
 tags:  issue summary
 ---
@@ -16,7 +17,7 @@ tags:  issue summary
 
 嘉宾:@杨早,@绿茶,@邱小石,@纸  物语,@寂三七,@蕴伽,@Zoom.Quiet,@沉醉寒冬,@呐言敏行的猪,@皮特慢慢地用,@北京刘柠,@布老鼠119,@半价优惠,@AaronShen,刘俊,liyuzheng,林彤,@淑婵想
 
-
+<!--more-->
 ## 荐书
 
 
