appended rn23 zip+img

--- a/_posts/2014-03-22-rn23-books.md
+++ b/_posts/2014-03-22-rn23-books.md
@@ -6,7 +6,8 @@ categories: 阅读邻居
 tags:  issue summary
 ---
 
-![](http://mmbiz.qpic.cn/mmbiz/jsFJEErL30iakY18ibV4F44Kg1LWeljjY7OGXdQdnKaicurgm5OvDsDQp0PzO7nDl5Hxxc84fSzic1Y5eUW1QYSADg/0)
+<img src="http://mmbiz.qpic.cn/mmbiz/jsFJEErL30iakY18ibV4F44Kg1LWeljjY7OGXdQdnKaicurgm5OvDsDQp0PzO7nDl5Hxxc84fSzic1Y5eUW1QYSADg/0" width="300" />
+
 (题图:读易洞宣传科科长,<<干净的错误>>作者胡颖为阅读邻居第23期电子书设计的封面)
 
 
