--- a/_posts/2014-04-01-rn23-zip.md
+++ b/_posts/2014-04-01-rn23-zip.md
@@ -6,9 +6,10 @@ categories: 阅读邻居
 tags:  issue summary
 ---
 
-![](http://mmbiz.qpic.cn/mmbiz/jsFJEErL30hO8evAbu1ibfUMg1YcRgmdEAFJbiaK4YplIJvNWxqibahCO5NSTEhV7e4VEY6icaJcRjPVrUxePHLgXw/0)
+<img src="http://mmbiz.qpic.cn/mmbiz/jsFJEErL30iakY18ibV4F44Kg1LWeljjY7OGXdQdnKaicurgm5OvDsDQp0PzO7nDl5Hxxc84fSzic1Y5eUW1QYSADg/0" width="300" />
 
-(题图: 阅读邻居第23期 集体合照,洞婆抓拍...)
+
+(题图:读易洞宣传科科长,<<干净的错误>>作者胡颖为阅读邻居第23期电子书设计的封面)
 
 
 主题:阅读邻居(第二十三期)
