--- a/_posts/2014-04-19-rn24-books.md
+++ b/_posts/2014-04-19-rn24-books.md
@@ -37,38 +37,52 @@ tags:  issue summary
 
 
 ## 曾剑飞
-- <<中国佛性论>>
+<<中国佛性论>>
+![s6190969.jpg（JPEG 图像，297x444 像素）](http://img5.douban.com/lpic/s6190969.jpg)
+
 - 赖永海 著
 - 中国青年出版社
 - 南怀瑾或者看星云法师都是从宗教本身去研究佛学,但是赖永海是任继愈的弟子,他是用中国哲学和唯物主义理论的方法研究宗教和佛学. 
 
 ## ![](http://tp2.sinaimg.cn/1683654377/30/1296720889/1) @沉醉寒冬:
 
-- <<我们为什么要谈东亚>>
+<<我们为什么要谈东亚>>
+![s7037978.jpg（JPEG 图像，294x450 像素）](http://img5.douban.com/lpic/s7037978.jpg)
+
 - 孙歌 著
 - 生活·读书·新知三联书店
 - 对于了解中日关系很有帮助. 
     
 ## ![](http://tp4.sinaimg.cn/1880167215/30/5613054763/0) @讷言敏行的猪:
-- <<大数据时代>>
+
+<<大数据时代>>
+![s24574862.jpg（JPEG 图像，312x426 像素）](http://img3.douban.com/lpic/s24574862.jpg)
+
 - [英] 维克托·迈尔-舍恩伯格,[英] 肯尼思·库克耶 著
 - 浙江人民出版社
 - 大家可能看到这个名就有点头疼,其实它不是一本技术书,而是讲在我们今天互联网爆炸的时代,大数据已经深刻的影响到我们的生活. 比如谷歌可以预测流感流行,机票什么时候买最便宜,大数据的本质其实是预测,这也说明人工智能已经发展到大家避免不了的阶段,它已经在深入影响大家的生活. 
     
 ## ![](http://tp2.sinaimg.cn/2610159681/30/5671342147/0) @蕴伽,
 
-- <<禅的体验>>,<<智慧的一百>>
+<<禅的体验>>[s3700358.jpg（JPEG 图像，120x188 像素）](http://img5.douban.com/lpic/s3700358.jpg)
+,<<智慧的一百>>
+![s3643744.jpg（JPEG 图像，297x447 像素）](http://img3.douban.com/lpic/s3643744.jpg)
+
 - 圣严法师 著
 - 陕西师范大学出版社
 - 我这段时间就是看<<本真性的理论>>,没看懂,有了烦恼,所以我要消除烦恼. 圣严法师<<禅的体验>>和<<智慧一百>>好象达到了这个效果,用文字滋润了心灵,但<<本真性的伦理>>让我更生烦恼,看不懂,还要努力的尽力的去看,在佛看来这是执吧. 
     
 ## 刘玥:
-- <<哆啦A梦>> 
+<<哆啦A梦>> 
+![s2273836.jpg（JPEG 图像，150x226 像素）](http://img5.douban.com/lpic/s2273836.jpg)
+
 - 能让我保持一个颗心,能有幻想,有梦想,有理想. 
 
 ## ![](http://tp2.sinaimg.cn/2682604197/30/22870334116/0) @淑婵想:
 
-- <<符号中国:旗袍>>
+<<符号中国:旗袍>>
+![s6269928.jpg（JPEG 图像，318x417 像素）](http://image31.bookschina.com/2008/20081002/s2984036.jpg)
+
 - 江南,谈雅丽　编著
 - 当代中国出版社出版
 - 因为我特别喜欢旗袍,我逐渐发现市面上卖的成衣已经不能满足我便开始自己买布料找裁缝做,但自己真正设计旗袍的时候就跟你看小说很容易,自己写就不是那么回事. 所以我买了一本专门介绍旗袍的书,就是这本<<符号中国:旗袍>>. 它里面除了对旗袍的历史演变进行概述,还对旗袍所有的细节,种类进行了描写. 比如说这个衣襟,就分为圆襟,直襟,方襟,琵琶襟等,而且每个衣襟的喻意不一样,适合女人的脸形和身材也是不一样的. 看这本书最好搭配上海人民美术出版社出版的<<月份牌旗袍美女>>系列的明信片,那个时期的旗袍已经发展到登峰造极的程度了. 回过头再看看拍民国时期的电影,比如<<色,戒>>,<<花样年华>>,你看那里面的旗袍就会发现设计师非常有意思的细节把握,汤唯和张曼玉属于两个类型的女人,汤唯属于圆脸,她的旗袍全部是矮领,葫芦扣. 张曼玉属于尖下巴,曲线比较明显,她的旗袍都是高领,布料花样喜欢竖线条. 通过看这本书,还有自己的学习就会了解原来旗袍有那么多奥妙. 
@@ -76,12 +90,14 @@ tags:  issue summary
     
 ## 刘强:
 <<阳明学述要>>
+![s4220137.jpg（JPEG 图像，297x444 像素）](http://img5.douban.com/lpic/s4220137.jpg)
 
 - 钱穆 著
 - 九州出版社
 - 心学讲的也是内心追求真理的想法,当然这是比较粗浅的说法,我觉得这本书和<<本真性的伦理>>的说法是有相关性的. 
 
 <<乡土中国>>
+![s1665415.jpg（JPEG 图像，294x450 像素）](http://img3.douban.com/lpic/s1665415.jpg)
 
 - 费孝通 著
 - 北京出版社
@@ -96,7 +112,9 @@ tags:  issue summary
 - 在几年前中国有一部被禁的电影<<夹边沟>>(王兵拍的),那个电影我也没有怎么看,因为整个是特别黑色的色调. 这本书我拿到之后发现它没有我想的这么深奥,它特别易读,作者采访了一些人,根据他自己的体会,描写了上世纪五十年代上海一些右派的故事,包括当时让上海普通的工人,小知识分子响应我们伟大的党的号召,去迁徙到甘肃的戈壁滩,后来发生了一些非常悲惨的事件. 这本书一开始就是一个故事,一个上海女人,她老公是一个右派,被派往离上海两千多里地的地方,他们有三年没有联系,她就来甘肃农场找她的老公,但是怎么也找不到,然后问丈夫的同事都不知道这人去了哪. 后来这个上海女人用一桶麦乳精的代价才知道她的老公已经死掉了,因为得肝病. 她又想把她老公的遗体带回去,但所有人都劝阻她. 最终她发现这些人不告诉她真实情况是因为她老公的尸体被人分吃了. 书里大概都是这样的一些故事. 
         
 ## ![](http://tp4.sinaimg.cn/1194991743/30/1279875308/1) @杨早:
+
 <<金钱不能买什么>>
+![s24417497.jpg（JPEG 图像，318x417 像素）](http://img5.douban.com/lpic/s24417497.jpg)
 
 - [美]迈克尔·桑德尔　著
 - 中信出版社
@@ -107,6 +125,7 @@ tags:  issue summary
 
 
 <<流动的斯文:合肥张家记事>>
+![s27241263.jpg（JPEG 图像，300x442 像素）](http://img3.douban.com/lpic/s27241263.jpg)
 
 - 王道　著
 - 浙江大学出版社
@@ -116,16 +135,20 @@ tags:  issue summary
 ## 李玉峰:
 
 <<环球科学>>
+![s4417836.jpg（JPEG 图像，181x240 像素）](http://img5.douban.com/lpic/s4417836.jpg)
 
 - 那是一本美国的杂志,里面全是稀奇古怪研究的课题,没有一个固定专业,但是很新颖,这个东西很刺激我,就是别人的思维方式为什么会找到这样的课题. 比如他研究怎么治拉肚子,他居然发明一个方法是用另外一个人的大便植入这个人的体内,因为里面有很好的抗菌,这样的思维方式很怪. 书中还有研究得出领导人和杀人犯的心理素质是一样的,诸如此类,很有意思,每月一本,有中文版. 
 
 <<读书>>
+![s2612490.jpg（JPEG 图像，250x368 像素）](http://img3.douban.com/lpic/s2612490.jpg)
 
 - 这些年一直坚持读,它挺丰富的,跨了很多不同的思维方式和系统,这个很刺激我. 
        
 ## 许蓓玲:
 
-- <<往事并不如烟>>
+<<往事并不如烟>>
+![s1284859.jpg（JPEG 图像，350x487 像素）](http://img5.douban.com/lpic/s1284859.jpg)
+
 - 章诒和 著
 - 人民文学出版社
 - 这本书我十年前看到的,因为很特别的名字,在十年前还是蛮少的,我买的时候听说被禁一阵子. 这是我第一次看大陆的书看到掉眼泪,原来在那个年代也有浪漫,原来在那个年代还有贵族的存在,这可能跟本真性一样是永远不会丢失的,不管在什么样的环境跟年代里. 那本书对我的触动很大,因为跟我以为的那个年代不太一样,那个环境好像有存在一些东西我曾经不知道,因为我所接触到的很多领导,他们都是在那个年代当中被打成什么派. 甚至我有客户告诉我说他们初中那个年代根本不可能读书,每天都在街上走,妈妈斗爸爸,爸爸被关起来,诸如此类的,所以我就觉得很黑暗. 但事实上不然,尽管里面所有的篇章都很沉重,所以掉眼泪,但是你还是可以从里面找到一些很人性,很浪漫,很贵族的东西,所以推荐给大家. 
@@ -133,8 +156,11 @@ tags:  issue summary
     
 ## ![](http://tp3.sinaimg.cn/1662059594/30/5652523042/1) @邱小石:
 
-- <<哥德尔,艾舍尔,巴赫>>
-- ［美］侯世达 著
+![s1789059.jpg（JPEG 图像，306x435 像素）](http://img5.douban.com/lpic/s1789059.jpg)
+
+<<哥德尔,艾舍尔,巴赫>>
+
+- [美]侯世达 著
 - 商务印书馆
 - 我读书有一个习惯,比如最近要读<<本真性的伦理>>,我看任何书都在想本真性的伦理,并让它和本真性的伦理发生联系. 我下面推荐的主要是一篇文章,但是里面涵盖几本书,刚才@讷言敏行的猪 推荐<<大数据时代>>,正好契合我想谈的话题. 
 - 几年前我开始用谷歌翻译的时候特别开心,我觉得终于有这样一个东西,今后人们可以不学习语言就能够彼此之间互相交流. 谷歌翻译的原理在吴军的<<数学之美>>里面有谈到过,核心是自然语言的生成. 八十年代之前,编程语言结构模式的进展越来越缓慢,八十年代之后由于计算机的运算能力的飞越,网络数据量的急剧增加,自然语言理论揭示出,可以通过不断的数据积累分析最后越来越接近翻译的准确. 当时我很兴奋,觉得过几年随着数据量分析的提升,最终能解决翻译问题. 但是前天我突然看到<<新知>>杂志上的一篇文章"让机器人学会思考",这篇文章一下把我拉回到原来读的一本书,这篇文章里面提到谷歌工程师发现,而且也是我使用体验到的感受,就是谷歌翻译在最近五年,虽然有改变,但是并没有人们想象的那种飞快的进展,期待的翻天覆地的变化没有发生,这里面发生了什么?
@@ -150,13 +176,15 @@ tags:  issue summary
 ## ![](http://tp4.sinaimg.cn/1644081727/30/1279883004/1) @绿茶
 
 <<荣光之路>>
+![s27200993.jpg（JPEG 图像，300x444 像素）](http://img3.douban.com/lpic/s27200993.jpg)
 
-- ［美] 伍迪·格斯里 著
+- [美] 伍迪•格斯里 著
 - 广西师范大学出版社
+- 美国民谣之父伍迪•格斯里开创了"以音乐介入社会改革"的先河. 他了解他的歌曲和生活,并以真诚的方式来歌唱生活. 他一生都在流浪,这一切源于他25岁时的一次出走.  从俄克拉荷马州出发,靠扒闷罐车,伸大拇指和徒步旅行走遍全美. 
 
 <<男人的菜市场>>
+![s27167871.jpg（JPEG 图像，315x423 像素）](http://img3.douban.com/lpic/s27167871.jpg)
 
 - 刘克襄 著
 - 上海人民出版社
-
-
+- 特别喜欢刘克襄,他是台湾的自然作家,永远在路上,虽然台湾很小,但对于一个作家而言,台湾不小了,可写的东西非常丰富. 哪怕我们习以为常的菜市场,都大有可写的东西. 这本书对于城市里的我们,非常有意义,让我们有种回归自然的感觉. 
