appended rn24-books+夹边沟记事

--- a/_posts/2014-04-19-rn24-books.md
+++ b/_posts/2014-04-19-rn24-books.md
@@ -105,7 +105,9 @@ tags:  issue summary
     
 ## ![](http://tp3.sinaimg.cn/1404738550/30/5663159496/1) @水长东东:
 
-- <<夹边沟记事>>
+<<夹边沟记事>>
+![s21882996.jpg（JPEG 图像，303x438 像素）](http://img5.douban.com/lpic/s21882996.jpg)
+
 - 杨显惠 著
 - 花城出版社
 - 这本书真的是妙手偶得,来自一个很偶然的机会,因为杨早书实在太多,很多书又不舍得扔掉,正好我家有很大的书柜,我又喜欢附庸文雅,喜欢把书柜填满来装饰我的家,我们两个一拍即合,我租给他我家里的书柜,他把一些书放在我家,时不时还可以去怀念一下,我也借此来粉饰一下门面. 很多人来我家之后觉得这个主人一定很有文化,因为有这么多书,而且很多书都是类似今天这种主题,大部分人都看不懂的书,我觉得很有面子,所以我一般也不去看. 那天实在无聊,然后就开始想找一个马桶读物,就忽然看到这本书. 
