appended rn24-books+夹边沟记事.

--- a/_posts/2014-04-19-rn24-books.md
+++ b/_posts/2014-04-19-rn24-books.md
@@ -64,7 +64,7 @@ tags:  issue summary
     
 ## ![](http://tp2.sinaimg.cn/2610159681/30/5671342147/0) @蕴伽,
 
-<<禅的体验>>[s3700358.jpg（JPEG 图像，120x188 像素）](http://img5.douban.com/lpic/s3700358.jpg)
+<<禅的体验>> ![s3700358.jpg（JPEG 图像，120x188 像素）](http://img5.douban.com/lpic/s3700358.jpg)
 ,<<智慧的一百>>
 ![s3643744.jpg（JPEG 图像，297x447 像素）](http://img3.douban.com/lpic/s3643744.jpg)
 
