--- a/_posts/2014-04-19-rn24-books.md
+++ b/_posts/2014-04-19-rn24-books.md
@@ -38,7 +38,7 @@ tags:  issue summary
 
 ## 曾剑飞
 <<中国佛性论>>
-![s6190969.jpg（JPEG 图像，297x444 像素）](http://img5.douban.com/lpic/s6190969.jpg)
+![s6190969.jpg(JPEG 图像,297x444 像素)](http://img5.douban.com/lpic/s6190969.jpg)
 
 - 赖永海 著
 - 中国青年出版社
@@ -47,7 +47,7 @@ tags:  issue summary
 ## ![](http://tp2.sinaimg.cn/1683654377/30/1296720889/1) @沉醉寒冬:
 
 <<我们为什么要谈东亚>>
-![s7037978.jpg（JPEG 图像，294x450 像素）](http://img5.douban.com/lpic/s7037978.jpg)
+![s7037978.jpg(JPEG 图像,294x450 像素)](http://img5.douban.com/lpic/s7037978.jpg)
 
 - 孙歌 著
 - 生活·读书·新知三联书店
@@ -56,7 +56,7 @@ tags:  issue summary
 ## ![](http://tp4.sinaimg.cn/1880167215/30/5613054763/0) @讷言敏行的猪:
 
 <<大数据时代>>
-![s24574862.jpg（JPEG 图像，312x426 像素）](http://img3.douban.com/lpic/s24574862.jpg)
+![s24574862.jpg(JPEG 图像,312x426 像素)](http://img3.douban.com/lpic/s24574862.jpg)
 
 - [英] 维克托·迈尔-舍恩伯格,[英] 肯尼思·库克耶 著
 - 浙江人民出版社
@@ -64,9 +64,9 @@ tags:  issue summary
     
 ## ![](http://tp2.sinaimg.cn/2610159681/30/5671342147/0) @蕴伽,
 
-<<禅的体验>> ![s3700358.jpg（JPEG 图像，120x188 像素）](http://img5.douban.com/lpic/s3700358.jpg)
+<<禅的体验>> ![s3700358.jpg(JPEG 图像,120x188 像素)](http://img5.douban.com/lpic/s3700358.jpg)
 ,<<智慧的一百>>
-![s3643744.jpg（JPEG 图像，297x447 像素）](http://img3.douban.com/lpic/s3643744.jpg)
+![s3643744.jpg(JPEG 图像,297x447 像素)](http://img3.douban.com/lpic/s3643744.jpg)
 
 - 圣严法师 著
 - 陕西师范大学出版社
@@ -74,14 +74,14 @@ tags:  issue summary
     
 ## 刘玥:
 <<哆啦A梦>> 
-![s2273836.jpg（JPEG 图像，150x226 像素）](http://img5.douban.com/lpic/s2273836.jpg)
+![s2273836.jpg(JPEG 图像,150x226 像素)](http://img5.douban.com/lpic/s2273836.jpg)
 
 - 能让我保持一个颗心,能有幻想,有梦想,有理想. 
 
 ## ![](http://tp2.sinaimg.cn/2682604197/30/22870334116/0) @淑婵想:
 
 <<符号中国:旗袍>>
-![s6269928.jpg（JPEG 图像，318x417 像素）](http://image31.bookschina.com/2008/20081002/s2984036.jpg)
+![s6269928.jpg(JPEG 图像,318x417 像素)](http://image31.bookschina.com/2008/20081002/s2984036.jpg)
 
 - 江南,谈雅丽　编著
 - 当代中国出版社出版
@@ -90,14 +90,14 @@ tags:  issue summary
     
 ## 刘强:
 <<阳明学述要>>
-![s4220137.jpg（JPEG 图像，297x444 像素）](http://img5.douban.com/lpic/s4220137.jpg)
+![s4220137.jpg(JPEG 图像,297x444 像素)](http://img5.douban.com/lpic/s4220137.jpg)
 
 - 钱穆 著
 - 九州出版社
 - 心学讲的也是内心追求真理的想法,当然这是比较粗浅的说法,我觉得这本书和<<本真性的伦理>>的说法是有相关性的. 
 
 <<乡土中国>>
-![s1665415.jpg（JPEG 图像，294x450 像素）](http://img3.douban.com/lpic/s1665415.jpg)
+![s1665415.jpg(JPEG 图像,294x450 像素)](http://img3.douban.com/lpic/s1665415.jpg)
 
 - 费孝通 著
 - 北京出版社
@@ -106,7 +106,7 @@ tags:  issue summary
 ## ![](http://tp3.sinaimg.cn/1404738550/30/5663159496/1) @水长东东:
 
 <<夹边沟记事>>
-![s21882996.jpg（JPEG 图像，303x438 像素）](http://img5.douban.com/lpic/s21882996.jpg)
+![s21882996.jpg(JPEG 图像,303x438 像素)](http://img5.douban.com/lpic/s21882996.jpg)
 
 - 杨显惠 著
 - 花城出版社
@@ -116,7 +116,7 @@ tags:  issue summary
 ## ![](http://tp4.sinaimg.cn/1194991743/30/1279875308/1) @杨早:
 
 <<金钱不能买什么>>
-![s24417497.jpg（JPEG 图像，318x417 像素）](http://img5.douban.com/lpic/s24417497.jpg)
+![s24417497.jpg(JPEG 图像,318x417 像素)](http://img5.douban.com/lpic/s24417497.jpg)
 
 - [美]迈克尔·桑德尔　著
 - 中信出版社
@@ -127,7 +127,7 @@ tags:  issue summary
 
 
 <<流动的斯文:合肥张家记事>>
-![s27241263.jpg（JPEG 图像，300x442 像素）](http://img3.douban.com/lpic/s27241263.jpg)
+![s27241263.jpg(JPEG 图像,300x442 像素)](http://img3.douban.com/lpic/s27241263.jpg)
 
 - 王道　著
 - 浙江大学出版社
@@ -137,19 +137,19 @@ tags:  issue summary
 ## 李玉峰:
 
 <<环球科学>>
-![s4417836.jpg（JPEG 图像，181x240 像素）](http://img5.douban.com/lpic/s4417836.jpg)
+![s4417836.jpg(JPEG 图像,181x240 像素)](http://img5.douban.com/lpic/s4417836.jpg)
 
 - 那是一本美国的杂志,里面全是稀奇古怪研究的课题,没有一个固定专业,但是很新颖,这个东西很刺激我,就是别人的思维方式为什么会找到这样的课题. 比如他研究怎么治拉肚子,他居然发明一个方法是用另外一个人的大便植入这个人的体内,因为里面有很好的抗菌,这样的思维方式很怪. 书中还有研究得出领导人和杀人犯的心理素质是一样的,诸如此类,很有意思,每月一本,有中文版. 
 
 <<读书>>
-![s2612490.jpg（JPEG 图像，250x368 像素）](http://img3.douban.com/lpic/s2612490.jpg)
+![s2612490.jpg(JPEG 图像,250x368 像素)](http://img3.douban.com/lpic/s2612490.jpg)
 
 - 这些年一直坚持读,它挺丰富的,跨了很多不同的思维方式和系统,这个很刺激我. 
        
 ## 许蓓玲:
 
 <<往事并不如烟>>
-![s1108667.jpg（JPEG 图像，392x604 像素）](http://img5.douban.com/lpic/s1108667.jpg)
+![s1108667.jpg(JPEG 图像,392x604 像素)](http://img5.douban.com/lpic/s1108667.jpg)
 
 - 章诒和 著
 - 人民文学出版社
@@ -158,7 +158,7 @@ tags:  issue summary
     
 ## ![](http://tp3.sinaimg.cn/1662059594/30/5652523042/1) @邱小石:
 
-![s1789059.jpg（JPEG 图像，306x435 像素）](http://img5.douban.com/lpic/s1789059.jpg)
+![s1789059.jpg(JPEG 图像,306x435 像素)](http://img5.douban.com/lpic/s1789059.jpg)
 
 <<哥德尔,艾舍尔,巴赫>>
 
@@ -178,14 +178,14 @@ tags:  issue summary
 ## ![](http://tp4.sinaimg.cn/1644081727/30/1279883004/1) @绿茶
 
 <<荣光之路>>
-![s27200993.jpg（JPEG 图像，300x444 像素）](http://img3.douban.com/lpic/s27200993.jpg)
+![s27200993.jpg(JPEG 图像,300x444 像素)](http://img3.douban.com/lpic/s27200993.jpg)
 
 - [美] 伍迪•格斯里 著
 - 广西师范大学出版社
 - 美国民谣之父伍迪•格斯里开创了"以音乐介入社会改革"的先河. 他了解他的歌曲和生活,并以真诚的方式来歌唱生活. 他一生都在流浪,这一切源于他25岁时的一次出走.  从俄克拉荷马州出发,靠扒闷罐车,伸大拇指和徒步旅行走遍全美. 
 
 <<男人的菜市场>>
-![s27167871.jpg（JPEG 图像，315x423 像素）](http://img3.douban.com/lpic/s27167871.jpg)
+![s27167871.jpg(JPEG 图像,315x423 像素)](http://img3.douban.com/lpic/s27167871.jpg)
 
 - 刘克襄 著
 - 上海人民出版社
