append rn25-issue

--- a/_posts/2014-06-12-rn25-books.md
+++ b/_posts/2014-06-12-rn25-books.md
@@ -3,7 +3,7 @@ layout: post
 title: 阅读邻居25期-守定-荐书
 author: zoomq
 categories: 阅读邻居
-tags:  issue summary
+tags:  issue summary book
 ---
 
 ![](http://ww3.sinaimg.cn/bmiddle/9b4cdbf4tw1efrihnz9k7j21501d8wk9.jpg)
