append rn25-issue+pic

--- a/_posts/2014-06-12-rn25-books.md
+++ b/_posts/2014-06-12-rn25-books.md
@@ -102,8 +102,8 @@ tags:  issue summary book
 
 
 - ![](http://tp4.sinaimg.cn/1801325347/30/5605756958/1) @老树叶子,
-![](http://img5.douban.com/mpic/s27451639.jpg)
 
+![](http://img5.douban.com/mpic/s27451639.jpg)
 
 - <<项塔兰>>
 - 罗伯兹　著
@@ -113,6 +113,11 @@ tags:  issue summary book
 
 
 - @梦想:
+
+
+<img src="http://ydlj.qiniudn.com/pic/rn25b_f14ec34fa04a419a5580cd364057cc77.jpg"
+    width="98"/>
+
 - <<城邦暴力团>>
 - 张大春 著
 - 上海人民出版社
@@ -233,6 +238,10 @@ tags:  issue summary book
 <<两个故宫的离合>>很短,但是写的非常好,作者野岛刚最近又出了一本<<谜一样的清明上河图>>. 野岛刚是一个记者,他写这两个故宫的历史,写文物,这不是他的擅长,他肯定写不过郑欣淼这些人,但是他有一个特点,他寻访了很多人,利用记者的优势,他思维上的东西,利用第三国的记者来观察这两个故宫有什么样的渊源. 他觉得中国的文化一直是被政治所捆绑或者说绑架,这让我想起王鼎钧的散文,他说共产党也好,国民党也好,他们斗的时候就像演戏,什么时候这两个人能够携起手来走上舞台向观众们鞠躬谢幕?他说很期待这一天. 
 
 野岛刚就是讲两个故宫的离合,寻访了很多大陆的,台湾的当事人,包括当年运宝藏宝的人. 他的书很短,不是写正规的历史,思维就像点穴一样,点中中国的文化到底在哪里出了问题,中国的文化将来会走向哪里. 当然也是利用一些中国文化比较玄妙的地方,你看故宫的宝藏经历了那么多波折,那么多的苦难,但是竟然没有损坏,他认为这里面是中国玄学的一种灵性. 
+
+
+<img src="http://ydlj.qiniudn.com/pic/rn25b_201405141137299214.jpg"
+    width="98"/>
 
 - <<风流图卷>>
 - 叶弥
